fix spacing on mobile

--- a/css/base.css
+++ b/css/base.css
@@ -102,9 +102,6 @@ body {
     "footer footer footer";
     margin: 0 auto;
     place-items: stretch;
-    grid-gap: 30px;
-    height: 80vh;
-    width: 80vw;
 }
 
 svg.iconSmall {
@@ -115,8 +112,6 @@ svg.iconSmall {
 @media screen and (max-width: 800px) {
     body {
 	overflow: hidden;
-	max-width: 100vw;
-	max-height: 100vh;
     }
     .container { 
 	display: grid;
@@ -128,9 +123,11 @@ svg.iconSmall {
 	"main main main"
 	". . ."
 	"footer footer footer";
-	grid-gap: 60px;
+	margin: 0 auto;
+	grid-gap: 80px;
     }
     .headerMenu {
+	place-self: center !important;
     }
     .iconHeader {
 	place-self: center;
